--- a/Exm1PRO/Exm1PRO.csproj
+++ b/Exm1PRO/Exm1PRO.csproj
@@ -43,8 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Animals.cs" />
+    <Compile Include="Arbol.cs" />
+    <Compile Include="Granja.cs" />
+    <Compile Include="IAnimal.cs" />
+    <Compile Include="Granjero.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Semilla.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
